opam-version: "1.2"
maintainer: "ar11@cs.ucc.ie"
authors: ["Aleksandr Reviakin"]
homepage: "https://www.ucc.ie/en/compsci/"
bug-reports: "https://github.com/uccmisl/dashc/issues"
dev-repo: "https://github.com/uccmisl/dashc.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: ["jbuilder" {build}]
available: [ ocaml-version >= "4.06.1"]