(executables
  (names dashc tests)
    (libraries
      core_kernel
      core
      async
      cohttp
      cohttp-async
      xml-light
      alcotest-async)
  (preprocess (pps ppx_jane))
  (modes native)
  (modules dashc playback representation segm_result adapt_algo tests)
)

(alias
 (name runtest)
  (deps tests.exe
   segmentlist_bbb_enc_10min_x264_dash.mpd.txt
   bbb_enc_10min_x264_dash.mpd
   tearsofsteel_enc_x264_dash.mpd)
  (action (run ./tests.exe))
)

(rule (copy ../test_mpd/segmentlist_bbb_enc_10min_x264_dash.mpd.txt segmentlist_bbb_enc_10min_x264_dash.mpd.txt))
(rule (copy ../test_mpd/bbb_enc_10min_x264_dash.mpd bbb_enc_10min_x264_dash.mpd))
(rule (copy ../test_mpd/tearsofsteel_enc_x264_dash.mpd tearsofsteel_enc_x264_dash.mpd))